--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +15,9 @@
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
+
