--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
+    "joi": "^17.12.3",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0"
   },
