--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
     "joi": "^17.12.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0"
   },
