--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "dev": "nodemon server.js"
   },
   "author": "",
@@ -15,7 +15,7 @@
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "express-validator": "^7.0.1",
+    "express-validator": "^7.0.1", 
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
